# Dedekind

./: .gitignore  CITATION.bib  CMakeLists.txt  Dedekind.sln  FileFormat.md  README.md  batchRangeHistory.txt  benchRandomWalks.sh  build.sh  compute_pmatch.py  estimateD10Job_100K.sh  estimateD10Job_10M.sh  estimateD10Job_128Split.sh  estimateD10Job_1M.sh  estimateD10Job_300K.sh  estimateD10Job_3M.sh  filteringStatistics.yaml  fpgaModules.sh  generateMBF9Job.sh  mbfLinks.grammar  parameterStudyBitComparisons.txt  profile.sh  setup.sh  setupNUMA.sh  testSupercomputing.sh  testSupercomputing5.sh  testSupercomputing6.sh  testSupercomputingFPGA.sh  topBots.grammar  vscodeImportCMake.sh
Dedekind/: Dedekind.vcxproj  MBFDecomposition.h  aligned_alloc.cpp  aligned_alloc.h  aligned_set.h  allMBFsMap.h  antiChainDecomposition.h  bfstream.h  bitSet.h  blockIterator.h  booleanFunction.h  bufferedMap.h  cmdParser.h  codeGen.cpp  codeGen.h  collectionOperations.h  connectGraph.h  countedEquivalenceClass.h  crossPlatformIntrinsics.h  debug.natvis  dedekind.cpp  dedekindDecomposition.cpp  dedekindDecomposition.h  equivClassCode.txt  equivalenceClass.cpp  equivalenceClass.h  equivalenceClassMap.h  fileNames.cpp  fileNames.h  fullIntervalSizeComputation.h  funcTypes.h  functionInput.h  functionInputBitSet.h  functionInputSet.h  heapArray.h  intSet.h  interval.h  intervalAndSymmetriesMap.h  intervalDecomposition.cpp  intervalDecomposition.h  (+26 more)
Dedekind/bigint/: endianness.h
Dedekind/tests/: bigintTests.cpp  bitsetTests.cpp  connectTests.cpp  functionInputBitSetTests.cpp  generators.h  indent.h  intervalTests.cpp  testUtils.h  testsMain.cpp  testsMain.h  tjomnTests.cpp
Tests/: bigintTests.cpp  bitsetTests.cpp  connectTests.cpp  intervalTests.cpp  testsMain.cpp  testsMain.h  tjomnTests.cpp
benchmarks/: benchmark.cpp  benchmark.h  benchmarks.vcxproj  canonizeBenchmark.cpp  connectBenchmarks.cpp
common/inc/AOCLUtils/: aocl_utils.h  opencl.h  options.h  scoped_ptrs.h
common/src/AOCLUtils/: opencl.cpp
dedelib/: MBFDecomposition.h  aligned_alloc.cpp  aligned_alloc.h  aligned_set.h  allMBFsMap.h  bitSet.h  booleanFunction.h  bottomBufferCreator.cpp  bottomBufferCreator.h  bufferedMap.h  cmdParser.h  codeGen.cpp  codeGen.h  configure.cpp  configure.h  connectGraph.h  crossPlatformIntrinsics.h  debug.natvis  dedekindDecomposition.h  dedekindEstimation.cpp  dedekindEstimation.h  dedelib.vcxproj  equivalenceClass.h  fileNames.cpp  fileNames.h  flatBufferManagement.cpp  flatBufferManagement.h  flatMBFStructure.h  flatPCoeff.cpp  flatPCoeff.h  flatPCoeffProcessing.cpp  flatPCoeffProcessing.h  fullIntervalSizeComputation.h  funcTypes.h  functionInput.natvis  functionInputSet.h  generators.h  interval.h  intervalAndSymmetriesMap.h  intervalDecomposition.h  (+53 more)
dedelib/bigint/: uint128_t.include  uint256_t.include  uint256_t_config.include
fpga_production/: .gitignore  Makefile  dataFormat.h  fpgaBoilerplate.cpp  fpgaBoilerplate.h  fpgaProcessor.cpp  fpgaProcessor.h  main.cpp
fpga_production/AOCLUtils/: options.cpp
fpga_production/host/src/: main.cpp
hardware/: .gitignore  dedekind.qpf  dedekind.qsf  dedekindAccelerator.cl  fpgaModules.sh  fullBuild.sh  fullBuildEmulation.sh  fullBuildSimulation.sh  fullPipeline.xml  fullPipelineKernel.cl  logicLockRegions.txt  makeReport.sh  pcoeffProcessor.xml  prepareLibrary.sh
hardware/dedekind.srcs/constrs_1/new/: basicClock.xdc
hardware/dedekind.srcs/sim_1/new/: dataProvider.v  fullPipelineTest.v  permuteCheck24Test.v  permuteCheck6Test.v  pipeline24PackTest.v  pipeline6Test.v  pipelineControllerTest.v  testQueuedAdderTable.v
hardware/dedekind.srcs/sources_1/new/: .gitignore  FIFO.v  M20K.v  botPermuter.v  bramProperties.vh  collectionModule.v  computeModule.v  countConnectedCore.v  exactlyOne.v  floodFillStep.v  fullPermuter.v  fullPipeline.v  graphCollector.v  graphGenerator.v  hyperPipelining.v  inputModule.v  leafElimination.v  leafElimination.vh  monotonize.v  monotonizeDown.v  monotonizeUp.v  multiPermutChecks.v  pipeline120Pack.v  pipeline24Pack.v  pipelineClock.sdc  pipelineGlobals.vh  pipelineRegister.v  pipelinedCountConnectedCore.v  popcnt.v  quadPortBRAM.v  queuedAdderTable.v  queuedDoubleBRAM.v  shiftSumTable.v  singletonElimination.v  streamingMemory.v  testFile.v  varSwap.v
hardware/sim/: OpenCLFullPermutePipelineTest.v  fastFIFOTest.v  openCLFullPipelineTest.v  permuteCheck24Test.v  permuteCheck6Test.v  pipeline24PackTest.v  pipeline6Test.v  singleStreamPipelineTest.v  testBotPermuter1234.v  testFullPermutationPipeline.v  testPermuteCheck720.v  testPermuteGen24.v  testPermuter1234.v  topTransmissionTest.v
hardware/src/: .gitignore  FIFO.v  FastFIFO.v  M20K.v  OpenCLFullPermutationPipeline.v  aggregatingPermutePipeline.v  aggregatingPipeline.v  botPermuter.v  botPermuter1234.v  botPermuterWithFIFO.v  collectionModule.v  collectionQuadPortRAM.v  computeModule.v  cosmicRayDetection.v  dualClockFIFO.v  fastDualClockFIFO.v  firstBit.v  fullPermutationPipeline.v  fullPipeline.v  fullPipelineCModel.cl  graphPermuter1234.v  hyperPipelining.v  inlineVarSwap.vhd  inlineVarSwap_header.v  inputModule.v  ipSettings_header.v  leafElimination.v  managedPipeline.v  memory.v  monotonize.v  multiPermutChecks.v  openCLFullPipeline.v  openCLFullPipelineClock2xAdapter.v  outputBuffer.v  pcoeffProcessorCModel.cl  pcoeffProcessorUnit.v  permutationGenerator.v  pipeline120Pack.v  pipeline24Pack.v  pipelineClock.sdc  (+15 more)
hardware/src/ip/: collectorM20K.ip  outputBufferFifo.ip  pipelineFIFO2.ip  pipelineFifo.ip  resetRelease.ip
indev/: indev.cpp  indev.vcxproj
production/: bottomBufferCommands.cpp  codeGenCommands.cpp  commands.h  dataGenerationCommands.cpp  dedekind.cpp  flatCommands.cpp  main.cpp  miscCommands.cpp  processingCommands.cpp  production.vcxproj  superCommands.cpp  testSetCommands.cpp  verificationCommands.cpp
tests/: Tests.vcxproj  bigintTests.cpp  connectTests.cpp  indent.cpp  testUtils.h
